fix alignment buttons

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,7 +46,7 @@
     }
 
     .button-normal {
-        @apply flex gap-4 h-14 min-w-[3.5rem] items-center cursor-pointer bg-bke-purple px-4 tracking-wider transition hover:shadow-[-3px_4px_0_#fcb04e];
+        @apply flex gap-4 h-14 min-w-[3.5rem] items-center justify-center cursor-pointer bg-bke-purple px-4 tracking-wider transition hover:shadow-[-3px_4px_0_#fcb04e];
     }
 
     .focused {
